fix: url creation was deprecated